--- a/exampleCMakeAndLib/lib/CMakeLists.txt
+++ b/exampleCMakeAndLib/lib/CMakeLists.txt
@@ -2,7 +2,12 @@
 message("------------------------------")
 message("Building the library ...")
 message("------------------------------")
+
 cmake_minimum_required(VERSION 3.16.3)
 project(my_library DESCRIPTION "A simple library" LANGUAGES CXX)
-add_library(${PROJECT_NAME} my_lib.cpp)
-target_include_directories(${PROJECT_NAME} PUBLIC my_test_program_SOURCE_DIR)
+
+set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
+set(INC_DIR ${PROJECT_SOURCE_DIR}/inc)
+
+add_library(${PROJECT_NAME} ${SRC_DIR}/my_lib.cpp)
+target_include_directories(${PROJECT_NAME} PUBLIC ${INC_DIR}/)
