--- a/exampleCMakeAndLib/CMakeLists.txt
+++ b/exampleCMakeAndLib/CMakeLists.txt
@@ -1,8 +1,6 @@
 message("------------------------------")
-message("Building the whole project...")
+message("Adding projects directories...")
 message("------------------------------")
-cmake_minimum_required(VERSION 3.16.3)
-project(My_Project DESCRIPTION "A simple test program" LANGUAGES CXX)
 
 add_subdirectory(lib)
 add_subdirectory(app)
